--- a/generator/service.ts.tmpl
+++ b/generator/service.ts.tmpl
@@ -125,7 +125,7 @@ export type {{.Name}} = Base{{.Name}}
 export class {{.Service.Name}} {
 {{- range .Service.Methods}}
   /**
-   * {{.TSMethodName}} - {{.HTTPMethod}} {{.URL}}
+   * {{.TSMethodName}} - {{.HTTPMethod}} {{escapeJSDoc .URL}}
    */
 {{- if .ServerStreaming }}
   static {{.TSMethodName}}(this:void, req: {{tsType .Input}}, entityNotifier?: fm.NotifyStreamEntityArrival<{{tsType .Output}}>, initReq?: fm.InitReq): Promise<void> {
@@ -150,7 +150,7 @@ export class {{.Service.Name}} {
 {{define "service_client"}}
 {{- range .Service.Methods}}
 /**
- * {{functionCase .TSMethodName}} - {{.HTTPMethod}} {{.URL}}
+ * {{functionCase .TSMethodName}} - {{.HTTPMethod}} {{escapeJSDoc .URL}}
  */
 {{- if .ServerStreaming }}
 export function {{functionCase .TSMethodName}}(req: {{tsType .Input}}, entityNotifier?: fm.NotifyStreamEntityArrival<{{tsType .Output}}>, initReq?: fm.InitReq): Promise<void> {
@@ -175,7 +175,7 @@ export class {{.Service.Name}}Client {
   }
   {{- range .Service.Methods}}
   /**
-   * {{functionCase .TSMethodName}} - {{.HTTPMethod}} {{.URL}}
+   * {{functionCase .TSMethodName}} - {{.HTTPMethod}} {{escapeJSDoc .URL}}
    */
   {{- if .ServerStreaming }}
   {{functionCase .TSMethodName}}(req: {{tsType .Input}}, entityNotifier?: fm.NotifyStreamEntityArrival<{{tsType .Output}}>, initReq?: fm.InitReq): Promise<void> {
